# autonomi

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  bootstrap_cache_migration.md  kad_migration_analysis.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  release-cycle-info  test.sh  update_kad_imports.sh
.claude/: settings.local.json
.claude/commands/: backwards-compat-test.md  create-test-rc-branch.md  prepare-for-auto-upgrade-test.md  prepare-hotfix-branch.md  produce-release-candidate.md  setup-rc-testing-context.md
.github/workflows/: antnode-upgrades.yml  auto-label-pr.yml  benchmark-prs.yml  build-linux-deb.yml  build-linux-rpm.yml  build-macos-app.yml  build-macos-pkg.yml  build-windows-msi.yml  build-windows-msix.yml  check-do-not-merge.yml  client-init-test.yml  files.yml  files_merkle.yml  generate-benchmark-charts.yml  label-check.yml  large_file_upload.yml  memcheck.yml  merge.yml  native_tokens.yml  nightly-release.yml  nightly.yml  node_man_tests.yml  nodejs-publish.yml  nodejs.yml  pointer.yml  publish-apt-repo.yml  python-bindings.yml  python-publish-client.yml  python-publish-node.yml  release.yml  scratchpad.yml  self-restart.yml  sign-build-binaries.yaml  verify-release-installers.yml
ant-bootstrap/: Cargo.toml  README.md
ant-bootstrap/src/: bootstrap.rs  cache_store.rs  config.rs  contacts.rs  contacts_fetcher.rs  error.rs  initial_peers.rs  lib.rs
ant-bootstrap/tests/: address_format_tests.rs  bootstrap_flow.rs  cache_store.rs  cache_tests.rs  cli_integration_tests.rs  config.rs  contacts.rs  e2e.rs  periodic_sync.rs  version.rs
ant-build-info/: Cargo.toml
ant-build-info/src/: release_info.rs
ant-cli/: Cargo.toml  README.md
ant-cli/benches/: files.rs
ant-cli/src/: commands.rs  exit_code.rs  main.rs  opt.rs  utils.rs
ant-cli/tests/: single_file_download_fix.rs
ant-evm/: Cargo.toml
ant-evm/src/: amount.rs  data_payments.rs  lib.rs
ant-kad/: Cargo.toml  README.md
ant-kad/src/: addresses.rs  behaviour.rs  bootstrap.rs  handler.rs  jobs.rs  kbucket.rs  lib.rs  record.rs
ant-kad/src/behaviour/: test.rs
ant-kad/src/kbucket/: bucket.rs  key.rs
ant-kad/src/query/peers/: closest.rs  fixed.rs
ant-kad/src/query/peers/closest/: disjoint.rs
ant-kad/src/record/store/: memory.rs
ant-kad/tests/: client_mode.rs  client_mode.rs.disabled
ant-logging/: Cargo.toml
ant-logging/src/: appender.rs  layers.rs  lib.rs  metrics.rs  multi_node.rs
ant-logging/tests/: formatter_consistency.rs  multi_node_logging.rs  test_nested_span_fix.rs
ant-metrics/: Cargo.toml
ant-metrics/src/: main.rs
ant-net/: Cargo.toml  README.md
ant-net/src/: behavior.rs  behavior_manager.rs  bridge.rs  builder.rs  connection.rs  driver.rs  error.rs  event.rs  event_router.rs  lib.rs  protocol.rs  transport.rs  types.rs
ant-net/src/behaviors/: do_not_disturb.rs  identify.rs  kademlia.rs  mod.rs  request_response.rs
ant-networking/: Cargo.toml
ant-networking/src/: bootstrap.rs  cmd.rs  driver.rs  error.rs  graph.rs  lib.rs  nat_detection.rs  network_builder.rs  network_discovery.rs  reachability_check.rs  record_store.rs  record_store_api.rs  relay_manager.rs  version.rs
ant-node/: Cargo.toml  README.md
ant-node-manager/: Cargo.toml  README.md  agent.md
ant-node-manager/src/: batch.rs  batch_service_manager.rs  config.rs  error.rs  helpers.rs  lib.rs  local.rs  metric.rs  rpc.rs  rpc_client.rs
ant-node-manager/tests/: e2e.rs  utils.rs
ant-node-nodejs/: Cargo.toml  index.d.ts  package-lock.json
ant-node-nodejs/src/: lib.rs
ant-node-rpc-client/: Cargo.toml
ant-node-rpc-client/src/: main.rs
ant-node/examples/: README.md  dual_stack_ab_testing.rs  iroh_only_demo.rs  spawn_local_network.rs  spawn_node.rs  spawn_nodes_on_mainnet.rs
ant-node/python/: example.py
ant-node/src/: critical_failure.rs  error.rs  event.rs  lib.rs  listen_addr_writer.rs  metrics.rs  (+8 more)
ant-peers-acquisition/: Cargo.toml
ant-protocol/: Cargo.toml
ant-service-management/: Cargo.toml
ant-token-supplies/: Cargo.toml
autonomi/: Cargo.toml  README.md  README_PYTHON.md  pyproject.toml
autonomi-core/: Cargo.toml
autonomi-core/src/: lib.rs
autonomi-core/src/client/: data_content.rs  download.rs  mod.rs  payment.rs  put_error_state.rs  quote.rs  record_get.rs  upload.rs  utils.rs
autonomi-core/src/client/data_types/: chunk.rs  graph.rs  mod.rs  pointer.rs  scratchpad.rs
autonomi-core/src/networking/driver/: mod.rs
autonomi-nodejs/: Cargo.toml
autonomi_core/: Cargo.toml
evm-testnet/: Cargo.toml
evmlib/: Cargo.toml  remappings.txt
nat-detection/: Cargo.toml
node-launchpad/: Cargo.toml  README.md  agent.md  build.rs
nodejs/: Cargo.toml  README.md
resources/: rc_template.md
sn_peers_acquisition/: Cargo.toml
test-utils/: Cargo.toml
(+442 files in other folders)
