[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Kademlia DHT implementation for Autonomi Network (forked from libp2p-kad)"
name = "ant-kad"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://maidsafe.net"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
either = "1.11"
fnv = "1.0"
asynchronous-codec = "0.7.0"
futures = "0.3.30"
libp2p-core = "0.43.0"
libp2p-swarm = "0.46.0"
futures-bounded = "0.2.4"
quick-protobuf = "0.8"
quick-protobuf-codec = "0.3.1"
libp2p-identity = { version = "0.2.11", features = ["rand"] }
rand = "0.8"
sha2 = "0.10.8"
smallvec = "1.13.2"
uint = "0.10"
futures-timer = "3.0.3"
web-time = "1.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0.56"
tracing = "0.1.40"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.1"
futures = "0.3.30"
libp2p-identify = "0.46.0"
libp2p-noise = "0.46.0"
libp2p-swarm = { version = "0.46.0", features = ["macros"] }
libp2p-swarm-test = "0.5.0"
libp2p-tcp = "0.43.0"
libp2p-yamux = "0.47.0"
quickcheck = "1.0.3"
serial_test = "3.0"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true