[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Network abstraction layer for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-net"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.1.0"

[features]
default = []
metrics = ["libp2p/metrics"]
open-metrics = ["prometheus-client"]

[dependencies]
# Core networking dependencies - these are the only crates allowed to import libp2p directly
libp2p = { version = "0.55.0", features = [
    "tokio",
    "dns",
    "identify",
    "quic", 
    "tcp",
    "noise",
    "yamux",
    "autonat",
    "upnp",
    "relay",
    "request-response",
    "cbor",
    "websocket",
    "macros"
] }
ant-kad = { path = "../ant-kad", version = "0.1.0" }
ant-protocol = { path = "../ant-protocol", version = "1.0.6" }

# Async and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization and data handling  
bytes = { version = "1.0.1", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11"
rmp-serde = "1.1.1"

# Error handling
thiserror = "1.0.23"
color-eyre = "0.6.3"

# Logging and metrics
tracing = { version = "~0.1.26" }
prometheus-client = { version = "0.22", optional = true }

# Crypto and utilities
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
test-utils = { path = "../test-utils" }

[lints]
workspace = true